<?xml version="1.0"?>
<package format="3">
  <name>iai_common_msgs</name>
  <version>0.0.6</version>
  <description>Message definitions created and used by the Institute for Artificial Intelligence research group at the University of Bremen</description>
 
  <author>IAI Robotics Group</author>
  <maintainer email="ai-robotics@cs.uni-bremen.de">AI Robotics</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <exec_depend>attache_msgs</exec_depend>
  <exec_depend>data_vis_msgs</exec_depend>
  <exec_depend>designator_integration_msgs</exec_depend>
  <exec_depend>grasp_stability_msgs</exec_depend>
  <exec_depend>iai_content_msgs</exec_depend>
  <exec_depend>iai_control_msgs</exec_depend>
  <exec_depend>iai_kinematics_msgs</exec_depend>
  <exec_depend>iai_pepper_demo_msgs</exec_depend>
  <exec_depend>iai_urdf_msgs</exec_depend>
  <exec_depend>iai_wsg_50_msgs</exec_depend>
  <exec_depend>json_prolog_msgs</exec_depend>
  <exec_depend>person_msgs</exec_depend>
  <exec_depend>planning_msgs</exec_depend>
</package>
