<?xml version="1.0"?>
<package format="3">
  <name>iai_wsg_50_msgs</name>
  <version>0.0.6</version>
  <description>
    Fork of the driver packages for the Weiss Robotics WSG 50 gripper.
    Maintained by the Institute for Artificial Intelligence, University Bremen.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <author>Nicolas Alt</author>
  <author>Robotnik</author>
  <author>Weiss Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

